Work on CLP ingestion state integration.
